--- a/inicio_estudiante.html
+++ b/inicio_estudiante.html
@@ -376,22 +376,47 @@
                 </section>
 
                 
-            <section id="asignaturas" class="section active">
-                <h2>Asignaturas</h2>
-                    <table class="subjects-table">
+                <section id="asignaturas" class="section active">
+                    <div class="container mt-4">
+                        <form id="formulario">
+                            <div class="section-title">Asignaturas</div>
+                            <div class="col-md-8">
+                            <table class="table table-bordered header-table">
+                        <tr>
+                            <th>Sede</th>
+                            <td>01</td>
+                            <th>Jornada</th>
+                            <td>Única</td>
+                            <th>Curso</th>
+                            <td>09-04</td>
+                        </tr>
+                    </table>
+                    <table class="table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>Asignatura</th>
+                                <th>Área/Asignatura</th>
                                 <th>Docente</th>
-                                <th>Horario</th>
+                                <th>Horario de Atención</th>
                             </tr>
                         </thead>
-                        <tbody id="subjectsBody">
-                            <!-- Se llenará con JavaScript -->
+                        <tbody>
+                            <tr><td>Ciencias Naturales</td><td>Rivera Guio Ximena Gisele</td><td>Martes 9:00 - 10:00 AM</td></tr>
+                            <tr><td>Ciencias Sociales</td><td>Pérez Goyeneche Margarita María</td><td>Miércoles 9:00 - 10:00 AM</td></tr>
+                            <tr><td>Artística</td><td>Yepes Palomino Fabio</td><td>Martes 10:30 - 11:30 AM</td></tr>
+                            <tr><td>Ética y Valores Humanos</td><td>Cáceres Patiño Santos Miguel</td><td>Martes 2:00 - 3:00 PM</td></tr>
+                            <tr><td>Educación Física</td><td>Martínez Díaz Rommel Albeiro</td><td>Lunes 9:00 - 11:00 AM</td></tr>
+                            <tr><td>Educación Religiosa</td><td>Merchán Becerra Luis Hipólito</td><td>Lunes 9:00 - 10:00 AM</td></tr>
+                            <tr><td>Lengua Castellana</td><td>Barragán Guauque Ana del Carmen</td><td>Viernes 7:55 - 8:50 AM</td></tr>
+                            <tr><td>Plan Lector</td><td>Cruz Rincón Elsy Yolanda</td><td>Jueves 10:30 - 11:30 AM</td></tr>
+                            <tr><td>Inglés</td><td>Gallo Corredor Clara Aurora</td><td>Jueves 7:00 - 8:00 AM</td></tr>
+                            <tr><td>Emprendimiento</td><td>Dueñas García Germán Darío</td><td>Lunes 10:30 - 11:30 AM</td></tr>
+                            <tr><td>Investigación</td><td>Rivera Guio Ximena Gisele</td><td>Martes 9:00 - 10:00 AM</td></tr>
+                            <tr><td>Matemáticas</td><td>Alfonso Tinjaca Marora</td><td>Viernes 7:55 - 8:50 AM</td></tr>
+                            <tr><td>Tecnología e Informática</td><td>Orozco Sandoval Isaac</td><td>Miércoles 13:00 - 14:00 PM</td></tr>
+                            <tr><td>Comportamiento Escolar</td><td>Barragán Guauque Ana del Carmen</td><td>Viernes 7:55 - 8:50 AM</td></tr>
                         </tbody>
                     </table>
-                </section>                
-            </section>
+                </section>
 
             <section id="calificaciones" class="section">
                 <h2>Calificaciones</h2>
